Fix content wrap issue

--- a/src/2/style.css
+++ b/src/2/style.css
@@ -2,7 +2,7 @@
 
 .StaticPage2 .hero {
   background: linear-gradient(135deg, #667EEA, #764BA2);
-  height: 500px;
+  min-height: 500px;
   overflow: hidden;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -26,13 +26,12 @@
 
 .StaticPage2 .hero .body {
   margin: 2em 133px;
+  height: 350px;
   display: flex;
   justify-content: space-between;
 }
 
-.StaticPage2 .hero .description {
-  width: 37%;
-}
+.StaticPage2 .hero .description {}
 
 .StaticPage2 .hero h1 {
   font-size: 36px;
@@ -43,10 +42,11 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 29px;
+  padding-bottom: 2em;
 }
 
 .StaticPage2 .hero .description img {
-  padding: 2em 1em;
+  padding: 0em 1em;
   padding-left: 0;
 }
 
